--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js",
+    "dev:custom": "node server.js",
+    "start:custom": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
-
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.21.0",
     "framer-motion": "^11.2.14",
     "lucide-react": "^0.437.0",
-
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.1",
-
     "next": "14.2.4",
     "progress": "^2.0.3",
     "python3": "^0.0.1",
@@ -40,10 +41,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
