--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
@@ -35,8 +36,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "shadcn": "^2.0.1",
-    "shadcn-ui": "^0.9.0",
+    "shadcn": "^1.0.0",
+    "shadcn-ui": "^0.2.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
